--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -11,7 +11,7 @@
       <ion-label position="stacked">senha</ion-label>
       <ion-input type="password"></ion-input>
     </ion-item>
-    <ion-button expand="block">Entrar</ion-button>
+    <ion-button expand="block" (click)="login()">Entrar</ion-button>
   </form>
   <ion-button expand="block" fill="outline">Registrar</ion-button>
 
