criando profile de test

--- a/src/app/pages/sorteios/sorteios.page.html
+++ b/src/app/pages/sorteios/sorteios.page.html
@@ -6,11 +6,11 @@
     <ion-buttons slot="end">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Números</ion-title>
+    <ion-title>Sorteios</ion-title>
   </ion-toolbar>
 </ion-header>
 
 
 <ion-content>
-<p>numeros</p>
+<p>Sorteios</p>
 </ion-content>
